adding auth (login, regiser, activation) with services and validations

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -1,5 +1,8 @@
 @import './variables';
 @import './fonts';
+@import './dot-floating';
+@import './dot-pulse';
+
 body {
   font-family: 'Poppins';
 }
